moved motivation to introduction

--- a/Proposal_report_Amir_ACM.tex
+++ b/Proposal_report_Amir_ACM.tex
@@ -145,11 +145,8 @@ Amir Azarbakht\\
 
 \maketitle
 
-
 \begin{abstract}
-Social networks are a ubiquitous part of our lives, and the creation of online social communities has been a natural extension of this phenomena. Free and Open Source Software (FOSS) development efforts are prime examples of how communities can be leveraged in software development, where group are formed around communities of interest, and depend on continued interest and involvement. Forking, either as a violent split or a friendly divide, affects the community. Most existing research on forking is post-hoc. The run-up to fork is seldom studied. This leaves a number of questions unanswered. In this study, we propose to use longitudinal social network analysis to study the evolution and social dynamics of FOSS communities. With these techniques we aim to identify better measures for influence and the shift of influence, measures associated with unhealthy group dynamics, e.g. a simmering conflict, as well as early indicators of major events in the lifespan of a community. One set of dynamics we are especially interested in, are those that lead FOSS projects to fork. This will help predict formation of unhealthy dynamics, which gives the community a heads-up when they can still take action to ensure the sustainability of the project.
-
-%How can we understand FOSS collaboration better? Can social issues that emerge be identified and addressed as they happen? Can the community heal itself, become more transparent and inclusive, and promote diversity? We propose a technique to address these issues by quantitative analysis and temporal visualization of social dynamics in FOSS communities. We propose using social network analysis to identify unhealthy dynamics; this will help predict formation of unhealthy dynamics and which gives the community a heads-up when they can still take action to ensure the sustainability of the project.
+Social networks are a ubiquitous part of our lives, and the creation of online social communities has been a natural extension of this phenomena. Free and Open Source Software (FOSS) development efforts are prime examples of how communities can be leveraged in software development, where group are formed around communities of interest, and depend on continued interest and involvement. Forking, either as an acrimonious split or a friendly divide, affects the community. Most existing research on forking is post-hoc. The run-up to fork is seldom studied. This leaves several questions unanswered. In this study, we propose using longitudinal social network analysis to study the evolution and social dynamics of FOSS communities. With these techniques we aim to identify measures for influence and the shift of influence, measures associated with unhealthy group dynamics, for example a simmering conflict, in addition to early indicators of major events in the lifespan of a community. One set of dynamics we are especially interested in, are those that lead FOSS projects to fork. This will help predict formation of unhealthy dynamics, which gives the community a heads-up when they can still take action to ensure the sustainability of the project.
 \end{abstract}
 
 % A category with the (minimum) three required fields
@@ -162,32 +159,34 @@ Social networks are a ubiquitous part of our lives, and the creation of online s
 
 \section{Introduction}
 \label{introduction}
-Social networks are a ubiquitous part of our social lives, and the creation of online social communities has been a natural extension of this phenomena. Social media plays an important role in software engineering, as software developers utilize them to communicate, learn, collaborate and coordinate with others \cite{Storey}. Free and Open Source Software (FOSS) development efforts are prime examples of how community can be leveraged in software development, where groups are formed around communities of interest, and depend on continued interest and involvement in order to stay alive \cite{NymanCodeForking}.
+Social networks are a ubiquitous part of our social lives, and the creation of online social communities has been a natural extension of this phenomena. Social media plays an important role in software engineering, as software developers use them to communicate, learn, collaborate and coordinate with others \cite{Storey}. Free and Open Source Software (FOSS) development efforts are prime examples of how community can be leveraged in software development, where groups are formed around communities of interest, and depend on continued interest and involvement to stay alive \cite{NymanCodeForking}.
 
-Although the bulk of collaboration and communication in FOSS communities occurs online and is publicly accessible, there are still many open questions about the social dynamics in FOSS communities. Projects might go through a metamorphosis when faced with an influx of new developers or the involvement of an outside organization. Conflicts between developers' divergent visions about the future of the project might lead to forking of the project and dilution of the community. Forking, either as a violent split when there is a conflict or as a friendly divide when new features are experimentally added both affect the community \cite{Bezrukova}.
+Although the bulk of collaboration and communication in FOSS communities occurs online and is publicly accessible, there are still many open questions about the social dynamics in FOSS communities. Projects may go through a metamorphosis when faced with an influx of new developers or the involvement of an outside organization. Conflicts between developers' divergent visions about the future of the project may lead to forking of the project and dilution of the community. Forking, either as an acrimonious split when there is a conflict, or as a friendly divide when new features are experimentally added, affect the community \cite{Bezrukova}.
 
-Previous research on forking ranges from the studies of Robles et al. \cite{Robles} that identified all significant FOSS forks since 1990, to the works of Baishakhi et al. \cite{Baishakhi} on post-forking porting of new features or bug fixes from peer projects. It encompasses works of Nyman on developers' opinions about forking \cite{NymanHackersForking}, developers motivations for performing forks \cite{NymanToForkOrNotToFork}, the necessity of code forking as tool for sustainability \cite{NymanForkingSustainability}, and Syeed's work on socio-technical dependencies in the BSD projects family \cite{Syeed}.
+Previous research on forking ranges from the studies of Robles et al. \cite{Robles} that identified all significant FOSS forks since 1990, to the works of Baishakhi et al. \cite{Baishakhi} on postforking porting of new features or bug fixes from peer projects. It encompasses works of Nyman on developers' opinions about forking \cite{NymanHackersForking}, developers motivations for performing forks \cite{NymanToForkOrNotToFork}, the necessity of code forking as tool for sustainability \cite{NymanForkingSustainability}, and Syeed's work on sociotechnical dependencies in the BSD projects family \cite{Syeed}.
 
-Most existing research on forking, however, is post-hoc. It looks at the forking events in retrospect and tries to find the outcome of the fork; what happened after the fork happened; what was the cause of forking, and such. The run-up to the forking events are seldom studied. This leaves a number of questions unanswered: Was it a long-term trend? Was the community polarized, before forking happened? Was there a shift of influence? Did the center of gravity of the community change? What was the tipping point? Was it predictable? Is it ever predictable? We are missing that context. 
+Most existing research on forking, however, is post-hoc. It looks at the forking events in retrospect and tries to find the outcome of the fork; what happened after the fork happened; what was the cause of forking, and such. The run-up to the forking events are seldom studied. This leaves several questions unanswered: Was it a long-term trend? Was the community polarized, before forking happened? Was there a shift of influence? Did the center of gravity of the community change? What was the tipping point? Was it predictable? Is it ever predictable? We are missing that context. 
 
-Additionally, studies of FOSS communities tend to suffer from an important limitation. They treat community as a static structure rather than a dynamic process. Longitudinal studies on open source forking are rare.
+Additionally, studies of FOSS communities tend to suffer from an important limitation. They treat community as a static structure rather than a dynamic process. Longitudinal studies on open source forking are rare. To better understand and measure the evolution, social dynamics of forked FOSS projects, and integral components to understanding their evolution and direction, we need new and better tools. With this knowledge and these tools, we could help projects reflect on their actions, and help community leaders make informed decisions about possible changes or interventions. It will also help potential sponsors make informed decisions when investing in a project, and throughout their involvement to ensure a sustainable engagement. 
 
-Our research proposes to use temporal social network analysis to study the evolution and social dynamics of FOSS communities. With these techniques we aim to identify better measures for influence, and the shift of influence, measures associated with unhealthy group dynamics, e.g. a simmering conflict, as well as early indicators of major events in the lifespan of a community. One set of dynamics we are especially interested in, are those that lead FOSS projects to fork. 
+Identification is the first step to rectify an undesirable dynamic before the damage is done. We want to map the dynamics of communities to real world phenomena. A community that does not manage growing pains may end up stagnating or dissolving. Managing growing pains is especially important in case of FOSS, where near half the project contributors are volunteers \cite{Forrest}. Oh et al. \cite{Oh} have argued that openness in FOSS is ``[...] generally perceived as having a positive connotation, however, the term can also be interpreted as referring to some unconstructive characteristics, such as unobstructed exit, susceptible, vulnerable, fragile, lacking effective regulation, and so on. The unobstructed exit and lack of regulatory force inherent in the OSS community can result in a community's susceptibility and vulnerability to herded exits by its participants. Commercial vendor intervention, an alternative project becoming available, and licensing issues can result in some original core members ceasing to provide their loyal service for the community, which can prompt their coworkers to leave as well'' \cite{Oh}. Identification of recipes for success or stagnation, sustainability or fragmentation may lead to a set of best practices and pitfalls.
 
-This paper is organized as follows: We present related literature on open source social communities. We then present the gap in the literature, and discuss why the issue needs to be addressed. After that, in methodology, we describe research goals and research questions, how data gathering, statistical modeling, and qualitative analysis are proposed to be done. At the end, we present preliminary results of our initial study, conclusions, the timeline for the proposed research, and threats to validity.
+Our research proposes using temporal social network analysis to study the evolution and social dynamics of FOSS communities. With these techniques we aim to identify better measures for influence, and the shift of influence, measures associated with unhealthy group dynamics, e.g. a simmering conflict, as well as early indicators of major events in the lifespan of a community. One set of dynamics we are especially interested in, are those that lead FOSS projects to fork. 
+
+This paper is organized as follows: We present related literature on open source social communities. We then present the gap in the literature, and discuss why the issue needs to be addressed. After that, in methodology, we describe research goals and research questions, how data gathering, statistical modeling, and qualitative analysis are proposed to be done. In section \ref{sectionInitialStudy}, we present preliminary results of our initial study. In section \ref{timeline}, the timeline for the proposed research, and threats to validity.
 
 \section{Related Work}
 \label{relatedwork}
 
-The free and open source software development communities have been studied extensively. Researchers have studied the social structure and dynamics of team communications \cite{Bird}\cite{HowisonSocialDynamics}\cite{HowisonFlossMole}\cite{Guzzi}\cite{Nakakoji}, identifying knowledge brokers and associated activities \cite{Sowe}, project sustainability \cite{NymanForkingSustainability}\cite{Nakakoji}, forking \cite{NymanCodeForking}, requirement satisfation \cite{Ernst}, their topology \cite{Bird}, their demographic diversity \cite{Kunegis}, gender differences in the process of joining them \cite{Kuechler}, and the role of age and the core team in their communities \cite{Torres}\cite{DavidsonVLHCC2014}\cite{AzarbakhtOSS2014}\cite{AzarbakhtINSNA2014}. Most of these studies have tended to look at community as a static structure rather than a dynamic process \cite{CrowstonFLOSSWhatWeKnow}. This makes it hard to determine cause and effect, or the exact impact of social changes.
+The free and open source software development communities have been studied extensively. Researchers have studied the social structure and dynamics of team communications \cite{Bird}\cite{Guzzi}\cite{HowisonSocialDynamics}\cite{HowisonFlossMole}\cite{Nakakoji}, identifying knowledge brokers and associated activities \cite{Sowe}, project sustainability \cite{Nakakoji}\cite{NymanForkingSustainability}, forking \cite{NymanCodeForking}, requirement satisfation \cite{Ernst}, their topology \cite{Bird}, their demographic diversity \cite{Kunegis}, gender differences in the process of joining them \cite{Kuechler}, and the role of age and the core team in their communities \cite{AzarbakhtOSS2014}\cite{AzarbakhtINSNA2014}\cite{DavidsonVLHCC2014}\cite{Torres}. Most of these studies have tended to look at community as a static structure rather than a dynamic process \cite{CrowstonFLOSSWhatWeKnow}. This makes it hard to determine cause and effect, or the exact impact of social changes.
 
-Post-forking porting of new features or bug fixes from peer projects happens among forked projects \cite{Baishakhi}. A case study of the BSD family, i.e. FreeBSD, OpenBSD, and NetBSD, all of which evolved from the same codebase found that 10-15\% of lines in BSD release patches consist of ported edits, and on average 26-58\% of active developers participate in porting per release. They also found that over 50\% of ported changes propagate to other projects within three releases \cite{Baishakhi}. This shows the amount of work developers need to do to synchronize and keep up with development in parallel projects. 
+Post-forking porting of new features or bug fixes from peer projects happens among forked projects \cite{Baishakhi}. A case study of the BSD family (i.e., FreeBSD, OpenBSD, and NetBSD, which evolved from the same codebase) found that 10-15\% of lines in BSD release patches consist of ported edits, and on average 26-58\% of active developers take part in porting per release. Additionally, They found that over 50\% of ported changes propagate to other projects within three releases \cite{Baishakhi}. This shows the amount of redundant work developers need to do to synchronize and keep up with development in parallel projects. 
 
-Visual exploration of the collaboration networks in the WebKit project was the focus of a study that aimed to observe how key events in the mobile-device industry affected the WebKit collaboration network over its lifetime. \cite{JoseWebKit} They found that \textit{coopetition} (both competition and collaboration) exists in the open source community; morover, they observed that the ``firms that played a more central role in the WebKit project such as Google, Apple and Samsung were by 2013 the leaders of the mobile-devices industry. While more peripheral firms such as RIM and Nokia lost market-share \cite{JoseWebKit}''.
+Visual exploration of the collaboration networks in the WebKit project was the focus of a study that aimed to observe how key events in the mobile-device industry affected the WebKit collaboration network over its lifetime. \cite{JoseWebKit} They found that \textit{coopetition} (both competition and collaboration) exists in the open source community; morover, they observed that the ``firms that played a more central role in the WebKit project such as Google, Apple and Samsung were by 2013 the leaders of the mobile-devices industry. Whereas more peripheral firms such as RIM and Nokia lost market-share'' \cite{JoseWebKit}.
 
-The study of communities has grown in popularity in part thanks to advances in social network analysis.  From the earliest works by Zachary \cite{Zachary} to the more recent works of Leskovec et al. \cite{LeskovecGraphsOverTime}\cite{LeskovecStatisticalPropertiesOfCommunityStructure}, there is a growing body of quantitative research on online communities. The earliest works on communities was done with a focus on information diffusion in a community \cite{Zachary}. Zachary investigated the fission of a community; the process of communities splitting into two or more parts. He found that fission could be predicted by applying the Ford-Fulkerson min-cut algorithm \cite{Ford} on the group's communication graph; ``the unequal flow of sentiments across the ties'' and discriminatory sharing of information lead to ``subcommunities with more internal stability than the community as a whole \cite{Zachary}.''
+The study of communities has grown in popularity in part thanks to advances in social network analysis.  From the earliest works by Zachary \cite{Zachary} to the more recent works of Leskovec et al. \cite{LeskovecGraphsOverTime}\cite{LeskovecStatisticalPropertiesOfCommunityStructure}, there is a growing body of quantitative research on online communities. The earliest works on communities was done with a focus on information diffusion in a community \cite{Zachary}. The study by Zachary investigated the fission of a community; the process of communities splitting into two or more parts. They found that fission could be predicted by applying the Ford-Fulkerson min-cut algorithm \cite{Ford} on the group's communication graph; ``the unequal flow of sentiments across the ties'' and discriminatory sharing of information lead to subcommunities with more internal stability than the community as a whole.\cite{Zachary}
 
-Community splits in free and open source software development are referred to as forks, and are relatively common. Forking is defined as ``\textit{when a part of a development community (or a third party not related to the project) starts a completely independent line of development based on the source code basis of the project.}'' The study by Robles and Gonzalez-Barahona \cite{Robles} identified 220 significant FOSS projects that have forked over the past 30 years, and compiled a comprehensive list of the dates and reasons for forking. They classified these into six main categories. (Table \ref{tableReasonsForForking}.) which we build on extensively. They identified a gap in the literature in case of ``how the community moves when a fork occurs \cite{Robles}.''
+Community splits in free and open source software development are referred to as forks, and are relatively common. Robles et al. \cite{Robles} define forking as ``when a part of a development community (or a third party not related to the project) starts a completely independent line of development based on the source code basis of the project.'' The study by Robles  et al. \cite{Robles} identified 220 significant FOSS projects that have forked over the past 30 years, and compiled a comprehensive list of the dates and reasons for forking. Table \ref{tableReasonsForForking} list their classification of forking reasosn, which we use and build on. They identified a gap in the literature in case of how the community moves when a fork occurs.''
 
 \begin{table}[!htbp]
 \centering
@@ -214,7 +213,7 @@ Legal issues & X.Org \& XFree \\
 \epsfig{file=ForkingReasonsPieChart.png, width=\columnwidth}
 \end{figure}
 
-The dynamic behavior of a network and identifying key events was the aim of a study by Asur et al \cite{Asur}. They studied three DBLP co-authorship networks and defined the evolution of these networks as following one of these paths: a) Continue, b) k-Merge, c) k-Split, d) Form, or e) Dissolve. They also defined four possible transformation events for individual members: 1) Appear, 2) Disappear, 3) Join, and 4) Leave. They compared groups extracted from consecutive snapshots, based on the size and overlap of every pair of groups. Then, they labeled groups with events, and used these identified events \cite{Asur}.
+The dynamic behavior of a network and identifying key events was the aim of a study by Asur et al \cite{Asur}. They studied three DBLP co-authorship networks and defined the evolution of these networks as following one of these paths: a) Continue, b) k-Merge, c) k-Split, d) Form, or e) Dissolve. They defined four possible transformation events for individual members: 1) Appear, 2) Disappear, 3) Join, and 4) Leave. They compared groups extracted from consecutive snapshots, based on the size and overlap of every pair of groups. Then, they labeled groups with events, and used these identified events \cite{Asur}.
 
 \begin{table}[!htbp]
 \caption{The behavioral measures used by Asur et al. \cite{Asur}}
@@ -225,8 +224,8 @@ The dynamic behavior of a network and identifying key events was the aim of a st
 \noalign{\smallskip}\hline\noalign{\smallskip}
 Stability & Tendency of a node to have interactions with the same nodes over time \\ \hline
 Sociability & Tendency of a node to have different interactions \\\hline
-Influence & Number of followers a node has on a network and how its actions are copied and/or followed by other nodes. (e.g. when it joins/leaves a conversation, many other nodes join/leave the conversation, too) \\\hline
-Popularity & Number of nodes in a cluster (how crowded a sub-community is) \\
+Influence & Number of followers a node has on a network and how its actions are copied and/or followed by other nodes. (e.g., when it joins/leaves a conversation, many other nodes join/leave the conversation, too) \\\hline
+Popularity & Number of nodes in a cluster (how crowded a subcommunity is) \\
 \noalign{\smallskip}\hline
 \end{tabular}
 \end{table}
@@ -253,25 +252,16 @@ Control of nodes  & Nodes are hard to control & Number of driver nodes \\
 \end{tabular}
 \end{table*}
 
-Community dynamics was the focus of a more recent study by Hannemann and Klamma \cite{Hannemann} on three open source bioinformatics communities. They measured "age" of users, as starting from their first activity and found survival rates and two indicators for significant changes in the core of the community. They identified a survival rate pattern of 20-40-90\%, meaning that only 20\% of the newcomers survived after their first year, 40\% of the survivors survived through the second year, and 90\% of the remaining ones, survived over the next years. As for the change in the core, they suggested that a falling maximal betweenness in combination with an increasing network diameter as an indicator for a significant change in the core, e.g. retirement of a central person in the community. Our approach in our initial network-specific study built on top of their findings, and the evolution of betweenness centralities and network diameters for the projects in our study are depicted in the following sections.
+Community dynamics was the focus of a more recent study by Hannemann and Klamma \cite{Hannemann} on three open source bioinformatics communities. They measured "age" of users, as starting from their first activity and found survival rates and two indicators for significant changes in the core of the community. They identified a survival rate pattern of 20-40-90\%, meaning that only 20\% of the newcomers survived after their first year, 40\% of the survivors survived through the second year, and 90\% of the remaining ones, survived over the next years. As for the change in the core, they suggested that a falling maximal betweenness in combination with an increasing network diameter as an indicator for a significant change in the core, e.g., retirement of a central person in the community. Our approach in our initial network-specific study built on top of their findings, and the evolution of betweenness centralities and network diameters for the projects in our study are explained in the following sections.
 
-\section{Motivation}
-\label{motivation}
-The run-up to the forking events are seldom studied. There are unanswered questions about the run-up to a fork: Was it a sudden change, or a long-run trend? Was the community polarized or united, before forking happened? Was there a shift of influence? Did the center of gravity of the community change? What was the tipping point? Was it predictable? Is it predictable? We are missing that context. 
-
-To better understand and measure the evolution, social dynamics of forked FOSS projects, and integral components to understanding their evolution and direction, we need new and better tools. With this knowledge and these tools, we could help projects reflect on their actions, and help community leaders make informed decisions about possible changes or interventions. It will also help potential sponsors make informed decisions when investing in a project, and throughout their involvement to ensure a sustainable engagement. 
-
-Identification is the first step to rectify an undesirable dynamic before the damage is done. We want to map the dynamics of communities to real world phenomena. A community that does not manage growing pains may end up stagnating or dissolving. Managing growing pains is especially important in case of FOSS, where near half the project contributors are volunteers \cite{Forrest}. Oh et al. \cite{Oh} have argued that openness in FOSS is ``[...] generally perceived as having a positive connotation, however, the term can also be interpreted as referring to some unconstructive characteristics, such as unobstructed exit, susceptible, vulnerable, fragile, lacking effective regulation, and so on. The unobstructed exit and lack of regulatory force inherent in the OSS community can result in a community's susceptibility and vulnerability to herded exits by its participants. Commercial vendor intervention, an alternative project becoming available, and licensing issues can result in some original core members ceasing to provide their loyal service for the community, which can prompt their coworkers to leave as well'' \cite{Oh}.
-
-Recipes for success or stagnation, sustainability or fragmentation could be identifiable, leading to a set of best practices and pitfalls.
 
 \section{Research Goals}
-\label{ResearchGoalsAndMethods}
+\label{ResearchGoals}
 
 Social interactions reflects the changes the community goes through, we argue. And so, it can be used to describe the context surrounding a forking event. Three of the six main reasons for forking \cite{Robles}, as listed in Table \ref{tableReasonsForForking} are socially related, and so should be reflected in the social interactions data. For example, if a fork occurred because of a desire for ``more community-driven development'', we expect to see interaction patterns in the collaboration data showing a strongly-connected core that is hard to penetrate for the rest of the community. In other words, in this case, the power stays in the hands of the same people throughout, as new people come and go. 
 
 We aim to 1) Analyze, quantify and visualize how the community is structured, how it evolves, and the degree to which community involvement changes over time; 2) Test whether the results of the analysis match what developers in the project's community remember? 
-Specifically, our research objective and research questions are listed in the following.\\
+Specifically, our research objective and research questions are listed in the following subsection \ref{ResearchObjective}.
 
 \subsection{Research Objective:}
 \label{ResearchObjective}
@@ -578,7 +568,7 @@ CUSUM betweenness & sharp increase & - & increase & - \\
 %\end{itemize}
 
 \section{Initial study: Temporal network-specific analysis}
-
+\label{sectionInitialStudy}
 In our initual study\cite{AzarbakhtOpenSym2013}\cite{AzarbakhtOSS2013}\cite{AzarbakhtVLHCC2014}, which was a network-specific study, we wanted to analyze the network-specific changes that happen to the community over a given period of time, e.g. three months before and three months after the year in which the forking event happened. For this network-specific study, we measured betweenness centrality \cite{Brandes} of the most significant nodes in the graph, and the graph diameter over time. Figures \ref{figureKamailioStackedAreaChart}, \ref{figureAmarokStachedAreaChart}, and \ref{figureAsteriskStackedAreaChart} show the betweenness centralities over the 1.5 year period for the Kamailio, Amarok and Asterisk projects respectively. To do temporal analysis, we had two options; 1) look at snapshots of the network state over time, (e.g. to look at the network snapshots in every week, the same way that a video is composed of many consecutive frames), and 2) look at a period through a time window. We preferred the second approach, and looked through a time window of three months wide with 1.5 month overlaps. To create the visualizations, we used a 3 months time frame that progressed six days a frame. In this way, we would have had a relatively smooth transition.
 
 \begin{figure}[!ht]
@@ -682,6 +672,7 @@ We also visualized the dynamic graphs (available online) and as stacked area cha
 More importantly, the initial study showed the limitations of a \textit{network-specific} approach, and hence, we need to adopt a \textit{population-processes} approach for our proposed main study.
 
 \section{Conclusion}
+\label{conclusion}
 Software development in free and open source software development are prime examples of how communities can be leveraged to create and maintain software. Forking, either as an undesirable violent split, or a non-undesirable friendly divide, affects the community. We propose to examine several software development projects that have forked over the past decade, and analyze the evolution and change of dynamics in the developers' interaction patterns. This may answer several open questions, particularly, about the run-up to forks, which is seldom studied.
 
 We proposed to model the developers interactions statistically, to find the population processes that underlie the formation, changes, and dissolution of developer communities. We expect to see distinct changes of such processes for each forking category; i.e. 1) Undesirable forks because of personal conflicts among the developer team, 2) Undesirable forks because of the need for more community-driven development, when a few elite developers behave in a clannish manner and put a glass ceiling for the rest of the community, 3) Other non-undesirable (e.g. Healthy) forks, in which, a fraction of developers temporarily fork away to add new features, and plan to merge back to the main project. We will also look at stable projects that have not forked undesirably, as control group. 
@@ -689,6 +680,7 @@ We proposed to model the developers interactions statistically, to find the popu
 We expect to find patterns specific to each of the above categories, which then may be used to identify early warning signs of forking. The identification of such measures may inform those who are interested in the sustainability of their project community to stay informed and take action to amend undesirable dynamics. 
 
 \section{Timeline}
+\label{timeline}
 
 Table \ref{timeline} outlines my proposed research timeline. It also shows the mapping between research questions and the phases of the study.
 
@@ -701,13 +693,10 @@ Table \ref{timeline} outlines my proposed research timeline. It also shows the m
 \addlinespace[1.5ex]
 Spring 2012 & Literature review & \\
 Fall 2012 & Literature review \& data collection & \\
-%Winter 2013 & ---''--- & \\
-%Spring 2013 & ---''--- & \\
 Fall 2013 & Data cleaning and wrangling &\\
 Winter 2014 & Creating communication graphs & \\
 Spring 2014 & Temporal visualization and temporal SNA & \\
 Fall 2014 & Preliminary statistical analysis & \\
-%Winter 2015 & ---''--- & RQ1-5\\
 Spring 2015 & Planning and preliminary examination & \\
 Summer 2015 & Statistical analysis & RQ 4.1.1-3\\
 Fall 2015 & Interviews designs (including pilots) & \\
@@ -719,7 +708,8 @@ June 2016 & Defense & \\
 \end{table}
 
 \section{Threats to Validity}
-The presented findings may not be generalized to all OSS projects. The projects studies in this paper were selected from a pool of candidate projects, partly because of the availability of their data. Given access, a better sampling approach could result in a more robust investigation. Furthermore, the proposed technique uses the data from online communications. The assumption that all the communication can be captured by mining repositories is intuitively imperfect, but inevitable. 
+\label{threatsToValidity}
+The presented findings may not be generalized to all FOSS projects. The projects studies in this paper were selected from a pool of candidate projects, partly because of the availability of their data. Given access, a better sampling approach could result in a more robust investigation. Furthermore, the proposed technique uses the data from online communications. The assumption that all the communication can be captured by mining repositories is intuitively imperfect, but inevitable. 
 The qualitative approach of interviewing key individuals from the community also reflects what they remember about their perception at the time, which should be taken with a grain of salt, as many of the projects forked several years ago. And, also perception of individuals cannot be taken as granted ground truth. 
 
 
